--- a/homework-2-clean-blog-website-sass/assets/sass/base/_reset.scss
+++ b/homework-2-clean-blog-website-sass/assets/sass/base/_reset.scss
@@ -36,3 +36,10 @@ button,
 input {
     outline: 0;
 }
+
+hr{
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
