--- a/homework-2-clean-blog-website-sass/assets/sass/main.scss
+++ b/homework-2-clean-blog-website-sass/assets/sass/main.scss
@@ -5,6 +5,12 @@
 
 // Base Styles
 @import "base/reset";
+@import "base/base";
+
+// Components
+@import "components/button";
+@import "components/post";
+@import "components/header";
 
 // Layout
 @import "layout/footer";
