--- a/homework-2-clean-blog-website-sass/assets/sass/abstracts/_variables.scss
+++ b/homework-2-clean-blog-website-sass/assets/sass/abstracts/_variables.scss
@@ -6,8 +6,10 @@ $hover-color: #0085A1;
 $white: #fff;
 $black: #000;
 
-$mobile-width: 768px;
-$tablet-width: 992px;
+$mobile-width: 576px;
+$tablet-width: 768px;
+$laptop-width: 992px;
+$desktop-width: 1200px;
 
 $primary-font: 'Open Sans', sans-serif;
 $secondary-font: 'Lora', serif;
