--- a/homework-2-clean-blog-website-sass/assets/sass/components/_header.scss
+++ b/homework-2-clean-blog-website-sass/assets/sass/components/_header.scss
@@ -1,3 +1,4 @@
+@use '../abstracts/' as *;
 .header{
     @include flex(center, center);
     flex-direction: column;
@@ -35,6 +36,17 @@
             line-height: 1.1;
             display: block;
             margin: 10px 0 0;
+        }
+    }
+}
+
+@include tablet{
+    .header{
+        
+        &-group{
+            &-title{
+                font-size: 5rem;
+            }
         }
     }
 }
